# Libre-Soundboard

./: .clang-format  .gitignore  CMakeLists.txt  README.md
ai/docs/: overview.md  tmp.md
ai/plans/: preferences_implementation_plan.md  waveform_generation_plan.md  waveform_plan.md
resources/icons/: icons.qrc
scripts/dev/: run_all.sh
src/: AudioEngine.cpp  AudioEngine.h  AudioEnginePlay.cpp  AudioEnginePlay.h  AudioFile.cpp  AudioFile.h  CMakeLists.txt  CustomTabBar.cpp  CustomTabBar.h  CustomTabWidget.h  DebugLog.cpp  DebugLog.h  KeepAliveMonitor.cpp  KeepAliveMonitor.h  MainWindow.cpp  MainWindow.h  PlayheadManager.cpp  PlayheadManager.h  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesManager.cpp  PreferencesManager.h  PreferencesPage.h  PreferencesPages.cpp  PreferencesPages.h  SessionManager.cpp  SessionManager.h  ShortcutsManager.cpp  ShortcutsManager.h  SingleInstance.cpp  SingleInstance.h  SoundContainer.cpp  SoundContainer.h  WaveformCache.cpp  WaveformCache.h  WaveformPyramid.cpp  WaveformPyramid.h  WaveformRenderer.cpp  WaveformRenderer.h  WaveformWidget.cpp  (+4 more)
tests/: CMakeLists.txt  test_audioengine_connections.cpp  test_audioengine_input.cpp  test_audiofile.cpp  test_basic.cpp  test_keepalive_monitor.cpp  test_mainwindow_keepalive.cpp  test_phase9_ui_integration.cpp  test_playhead_manager.cpp  test_preferences_dialog.cpp  test_preferences_phase2.cpp  test_preferences_phase3.cpp  test_preferences_phase4.cpp  test_preferences_phase5.cpp  test_preferences_phase6.cpp  test_preferences_phase7.cpp  test_preferences_phase8.cpp  test_session_dirty_state.cpp  test_sessions_phase9.cpp  test_soundcontainer_cache_flow.cpp  test_soundcontainer_phase5.cpp  test_soundcontainer_waveform.cpp  test_waveform_cache_eviction.cpp  test_waveform_pyramid.cpp  test_waveform_renderer.cpp  test_waveform_worker.cpp
